# ffTRF

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: development.md  examples.md  getting-started.md  index.md
docs/guides/: choosing-segment-settings.md  core-workflow.md  diagnostics-and-transfer-functions.md  frequency-resolved.md  inputs-and-shapes.md  multitaper.md  regularization.md  significance-testing.md  trial-weighting-and-bootstrap.md
docs/notebooks/: frequency-resolved.ipynb  getting-started.ipynb
docs/reference/: index.md  metrics.md  preprocessing.md  results.md  settings.md  trf.md
examples/: README.md  benchmark_runtime.py  compare_with_mtrf.py  comparison_utils.py  example_alpha_plus_erp.py  example_backward_decoding.py  example_banded_regularization.py  example_bootstrap_confidence_interval.py  example_frequency_resolved_weights.py  example_mtrf_sample_eeg.py  example_multi_trial_single_channel.py  example_multifeature_multichannel.py  example_multitaper_diagnostics.py  example_multitaper_estimator.py  example_save_and_load.py  example_single_trial_single_channel.py  example_trial_weighting.py  mtrf_sample_data.py  run_all_examples.py  simulated_data.py
src/fft_trf/: __init__.py  bayesian.py  model.py  plotting.py  preprocessing.py
src/fft_trf.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/fft_trf/experimental/: __init__.py  bayesian.py
src/fftrf/: __init__.py  bayesian.py  estimator.py  metrics.py  model.py  plotting.py  prediction.py  preprocessing.py  results.py  spectral.py  utils.py
src/fftrf/experimental/: __init__.py  bayesian.py
tests/: test_bayesian.py  test_model.py  test_public_api.py
