[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fftrf"
version = "0.1.0"
description = "ffTRF: frequency-domain temporal response function and deconvolution tools."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
]

[project.optional-dependencies]
test = [
  "pytest>=9",
]
compare = [
  "matplotlib>=3.8",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.26"
scipy = ">=1.12"

[tool.pixi.pypi-dependencies]
fftrf = { path = ".", editable = true }

[tool.pixi.feature.compare.dependencies]
matplotlib = ">=3.8"

[tool.pixi.feature.compare.pypi-dependencies]
mtrf = ">=2.0"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["test"], solve-group = "default" }
compare = { features = ["compare"], solve-group = "default" }

[tool.pixi.tasks]
test = "python -m pytest -q"
import-check = "python -c \"import fftrf; print(fftrf.FrequencyTRF.__name__)\""
compare-demo = "python examples/compare_with_mtrf.py --output artifacts/kernel_comparison.png --no-show"
benchmark-demo = "python examples/benchmark_runtime.py --output artifacts/runtime_benchmark.md"
