[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fftrf"
version = "0.1.0"
description = "ffTRF: frequency-domain temporal response function and deconvolution tools."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "scipy>=1.12",
]

[project.optional-dependencies]
test = [
  "pytest>=9",
]
compare = [
  "matplotlib>=3.8",
  "mtrf>=2.0",
]
docs = [
  "mkdocs>=1.6",
  "mkdocs-jupyter>=0.25",
  "mkdocs-material>=9.5",
  "mkdocstrings>=0.28",
  "mkdocstrings-python>=1.12",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-64", "osx-arm64", "win-64"]

[tool.pixi.dependencies]
python = ">=3.10,<3.14"
numpy = ">=1.26"
scipy = ">=1.12"

[tool.pixi.pypi-dependencies]
fftrf = { path = ".", editable = true }

[tool.pixi.feature.tests.pypi-dependencies]
pytest = ">=9"

[tool.pixi.feature.comparison.dependencies]
matplotlib = ">=3.8"

[tool.pixi.feature.comparison.pypi-dependencies]
mtrf = ">=2.0"

[tool.pixi.feature.docs-site.pypi-dependencies]
mkdocs = ">=1.6"
mkdocs-jupyter = ">=0.25"
mkdocs-material = ">=9.5"
mkdocstrings = ">=0.28"
mkdocstrings-python = ">=1.12"

[tool.pixi.environments]
default = { features = [], solve-group = "default" }
test = { features = ["tests"], solve-group = "default" }
compare = { features = ["comparison"], solve-group = "default" }
docs = { features = ["docs-site"], solve-group = "default" }

[tool.pixi.tasks]
test = "python -m pytest -q"
import-check = "python -c \"import fftrf; print(fftrf.TRF.__name__)\""
compare-demo = "python examples/compare_with_mtrf.py --output artifacts/kernel_comparison.png --no-show"
benchmark-demo = "python examples/benchmark_runtime.py --output artifacts/runtime_benchmark.md"
docs-serve = "mkdocs serve"
docs-build = "mkdocs build --strict"
